ref(users): java8 compatible collectors
Co-authored-by: Geoff Bourne <itzgeoff@gmail.com>